--- a/privatePortfolio/web/src/index.css
+++ b/privatePortfolio/web/src/index.css
@@ -207,11 +207,16 @@ body {
   );
 }
 
-.html5 {
-  background: linear-gradient(45deg, #f3ec78, #af4261);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
-  -webkit-text-fill-color: transparent;
+.spinning {
+  transition: all 0.6s;
+  animation: spinning 1s infinite;
+}
+
+@keyframes spinning {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
 }
