--- a/privatePortfolio/web/src/index.css
+++ b/privatePortfolio/web/src/index.css
@@ -188,7 +188,6 @@ body {
 
 .myHeadLiterally {
   background-image: url('../src/resource/Capture.jpg');
-  /* background-image: url('./resource/pic_5a.jpg'); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position-x: center;
@@ -218,5 +217,24 @@ body {
   }
   to {
     transform: rotateY(360deg);
+  }
+}
+
+@keyframes letterOpacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* backward */
+@keyframes letterOpacityBack {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
