--- a/privatePortfolio/web/src/index.css
+++ b/privatePortfolio/web/src/index.css
@@ -238,3 +238,43 @@ body {
     opacity: 0;
   }
 }
+
+.oneRowContainer_visible {
+  opacity: 1;
+  transform: translateX(0vw);
+  visibility: visible;
+}
+
+.oneRowContainer_visible:nth-child(1) {
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
+.oneRowContainer_visible:nth-child(2) {
+  transition: opacity 0.5s ease-out 0.1s, transform 0.5s ease-out 0.1s;
+}
+
+.oneRowContainer_visible:nth-child(3) {
+  transition: opacity 0.5s ease-out 0.2s, transform 0.5s ease-out 0.2s;
+}
+
+.oneRowContainer_visible:nth-child(4) {
+  transition: opacity 0.5s ease-out 0.3s, transform 0.5s ease-out 0.3s;
+}
+
+.oneRowContainer_visible:nth-child(5) {
+  transition: opacity 0.5s ease-out 0.4s, transform 0.5s ease-out 0.4s;
+}
+.oneRowContainer_visible:nth-child(6) {
+  transition: opacity 0.5s ease-out 0.5s, transform 0.5s ease-out 0.5s;
+}
+.oneRowContainer_visible:nth-child(7) {
+  transition: opacity 0.5s ease-out 0.6s, transform 0.5s ease-out 0.6s;
+}
+
+.oneRowContainer {
+  opacity: 0;
+  transform: translateX(-20vw);
+  visibility: visible;
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+  will-change: opacity, visibility;
+}
