--- a/privatePortfolio/web/src/index.css
+++ b/privatePortfolio/web/src/index.css
@@ -278,10 +278,15 @@ body {
   }
 }
 
-.oneRowContainer_visible {
+.oneRowContainer_visible,
+.sectionThreeProjectOneLeft_visible {
   opacity: 1;
   transform: translateX(0vw);
   visibility: visible;
+}
+
+.sectionThreeProjectOneLeft_visible {
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
 }
 
 .oneRowContainer_visible:nth-child(1) {
@@ -310,7 +315,8 @@ body {
   transition: opacity 0.5s ease-out 0.6s, transform 0.5s ease-out 0.6s;
 }
 
-.oneRowContainer {
+.oneRowContainer,
+.sectionThreeProjectOneLeft {
   opacity: 0;
   transform: translateX(-20vw);
   visibility: visible;
