--- a/privatePortfolio/web/src/index.css
+++ b/privatePortfolio/web/src/index.css
@@ -365,3 +365,8 @@ body {
 .gray300overlay {
   height: calc(100vh + 2.5rem) !important;
 }
+
+.navbar_top {
+  background: transparent;
+  transition: 0.5s ease;
+}
