--- a/privatePortfolio/web/src/index.css
+++ b/privatePortfolio/web/src/index.css
@@ -406,3 +406,56 @@ nav div a:hover::after {
 .footerIconContainer .footerIcon2 {
   transform: translateY(-5rem);
 }
+
+/* Burgerline */
+
+.burgerline {
+  display: block;
+  position: relative;
+  top: 0%;
+  width: 30px;
+  background: #fff;
+  margin: auto;
+  height: 2px;
+  transition: 1s ease;
+  opacity: 1;
+}
+
+.burgerline::before {
+  content: '';
+  display: block;
+  position: relative;
+  width: 30px;
+  height: 2px;
+  margin: auto;
+  background: #fff;
+  top: 10px;
+  left: 0px;
+  transition: 0.5s ease;
+}
+
+.burgerline::after {
+  content: '';
+  display: block;
+  position: relative;
+  width: 30px;
+  height: 2px;
+  margin: auto;
+  background: #fff;
+  top: -12px;
+  left: 0px;
+  transition: 0.5s ease;
+}
+
+.burgerline.open {
+  transform: rotate(180deg);
+  background: transparent;
+}
+
+.burgerline.open::before {
+  transform: translateY(-10px) rotate(45deg);
+}
+
+.burgerline.open::after {
+  transform: translateY(10px) rotate(-45deg);
+}
