adding a slight delay of fading animation

--- a/privatePortfolio/web/src/index.css
+++ b/privatePortfolio/web/src/index.css
@@ -51,7 +51,7 @@ body {
 
 .fading {
   z-index: -9 !important;
-  animation: fading 1s forwards;
+  animation: fading 1s forwards 0.1s;
 }
 
 .amazingCarousel_1a {
